@@ -769,8 +769,16 @@ Don't call us, we'll call you."/>
 			is secure.  It might be possible to use it for Cross-Site-Scripting.
 			If you don't trust it, or me, set this to 1.
 		-->
-		
 		<add key="DisableFCKEditor" value="0" />
+
+		<!--
+			If your view_attachment.aspx isn't working when you are trying to download
+			a large file, then try setting this to 1.  
+			But you might have problems on  Windows Server 2000:
+			http://support.microsoft.com/?kbid=902780
+		-->
+		<add key="UseTransmitFileInsteadOfWriteFile" value="1" />
+		
 		
 	</btnetSettings>
 
